# ESP32C6

./: .gitignore
esp_rtos_lab/: CMakeLists.txt  sdkconfig.defaults
esp_rtos_lab/components/esp_bsp/: CMakeLists.txt  bsp_battery.c  bsp_battery.h  bsp_display.c  bsp_display.h  bsp_i2c.c  bsp_i2c.h  bsp_qmi8658.c  bsp_qmi8658.h  bsp_sdcard.c  bsp_sdcard.h  bsp_spi.c  bsp_spi.h  bsp_touch.c  bsp_touch.h  bsp_wifi.c  bsp_wifi.h
esp_rtos_lab/components/lvgl_ui/: CMakeLists.txt  lvgl_ui.c  lvgl_ui.h
esp_rtos_lab/components/lvgl_ui/tileview/: camera_tile.c  camera_tile.h  image_tile.c  image_tile.h  qmi8658_tile.c  qmi8658_tile.h  rgb_tile.c  rgb_tile.h  system_tile.c  system_tile.h  wifi_tile.c  wifi_tile.h
esp_rtos_lab/main/: CMakeLists.txt  idf_component.yml  main.c
esp_rtos_lab/main/demos/: event_groups.c  factory_demo.c  queue_demo.c  semaphore_demo.c  software_timers.c  task_notifications.c  tasks.c  tasks_demo.c
esp_rtos_lab/partition_table/: partition_table.csv
esp_security_lab/: CMakeLists.txt
esp_security_lab/main/: CMakeLists.txt  main.c
esp_security_lab/main/demos/: crypto_cbc_demo.c  crypto_demo.c
esp_security_lab/partition_table/: partition_table.csv
hello_world/: log.txt  sdkconfig
